# epub-builder

./: .gitignore  AGENTS.md  CLAUDE.md  DEPENDENCIES.md  LICENSE  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  uno.config.d.ts  uno.config.d.ts.map  uno.config.ts  vite.config.d.ts.map  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.windsurf/plans/: chinese-indent-45ec43.md  color-picker-7b6f83.md  doubao-small-window-ocr.md  editor-overall-7b6f83.md  editor-theme-improvement-8e4380.md  epub-builder-plan-43cee7.md  multi-image-ocr.md  multi-indent-7b6f83.md  ocr-image-import-d7ab79.md  optimization-audit-f2fe6c.md  project-audit-2026-04-26.md  skip-md-indent-7b6f83.md
.windsurf/skills/epub-export/: SKILL.md
.windsurf/skills/tauri-build/: SKILL.md
docs/: doubao-ocr-status.md
scripts/: sync-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/ocr/: build-sidecar.ps1  corrections.json  requirements.txt  setup.ps1  sidecar.py
src-tauri/src/: doubao.rs  lib.rs  main.rs  pdf_export.rs
src/__tests__/: debounce.test.ts  editor.test.ts  epub.test.ts  export.test.ts  exportDocx.test.ts  importEpub.test.ts  importMarkdown.test.ts  importPdf.test.ts  importWord.test.ts  markdown.test.ts  useChapter.test.ts  useEditorZoom.test.ts  useEpub.test.ts  useExport.test.ts  useImport.test.ts  useImport.word.test.ts  useScrollSync.test.ts
src/components/common/: ThemeSwitcher.vue
src/components/editor/: ChapterNode.vue  ChapterTitle.vue  CodeMirrorEditor.vue  EditorToolbar.vue  MarkdownHelp.vue
src/components/import/: ImportDialog.vue
src/components/preview/: MarkdownPreview.vue
src/composables/: useAiOcrSettings.ts  useBook.ts  useChapter.ts  useChapterManager.ts  useEditorZoom.ts  useEpub.ts  useExport.ts  useImport.ts  useResizable.ts  useScrollSync.ts
src/db/: index.ts
src/i18n/: en.ts  index.ts  zh-CN.ts
src/pages/: Editor.vue  Home.vue  Settings.vue
src/router/: index.ts
src/stores/: book.ts  editor.ts  theme.ts
src/styles/: global.css  themes.css
src/types/: index.ts
src/utils/: assets.ts  debounce.ts  epub.ts  export.ts  exportDocx.ts  fs-browser.ts  image.ts  importEpub.ts  importMarkdown.ts  importPdf.ts  importText.ts  importWord.ts  markdown.ts
