[package]
name = "epub-builder"
version = "0.1.0"
edition = "2021"

[lib]
name = "epub_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-notification = "2.3.3"

[profile.dev]
incremental = false
