[package]
name = "epub-builder"
version = "0.1.0"
edition = "2021"

[lib]
name = "epub_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "tiff"] }
tempfile = "3"
pdfium-render = "0.8"
pdfium-auto = "0.3"
windows = { version = "0.61", features = [
    "Foundation_Collections",
    "Globalization",
    "Win32_Graphics_Gdi",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3.6.1"
tungstenite = "0.24"
ureq = { version = "2.12.1", default-features = false }
url = "2.5.4"

[profile.dev]
incremental = false
