[package]
name = "epub-builder"
version = "0.2.3"
edition = "2021"

[lib]
name = "epub_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
arboard = "3.6.1"
image = "0.25"

[profile.dev]
incremental = false
